special proposal, FTLImmune anchor

--- a/Resources/Prototypes/_CP14/Entities/Stations/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Stations/base.yml
@@ -15,8 +15,9 @@
     - type: CP14StationTravelingStoreshipTarget
       staticBuyPositions:
       - TestStore1
-      - TestStore2
+      - TestStore2 
       staticSellPositions:
       - GoldBars
-      - IronBars
+      dynamicSellPositions:
       - CopperBars
+      - IronBars
