--- a/Resources/Prototypes/_CP14/SoundCollections/items.yml
+++ b/Resources/Prototypes/_CP14/SoundCollections/items.yml
@@ -48,3 +48,10 @@
   files:
   - /Audio/_CP14/Items/book1.ogg
   - /Audio/_CP14/Items/book2.ogg
+
+- type: soundCollection
+  id: CP14Coins
+  files:
+  - /Audio/_CP14/Items/coins1.ogg
+  - /Audio/_CP14/Items/coins2.ogg
+  - /Audio/_CP14/Items/coins3.ogg
