--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -468,6 +468,12 @@
     cp14-chatsan-word-84: cp14-chatsan-replacement-84
     cp14-chatsan-word-85: cp14-chatsan-replacement-85
     cp14-chatsan-word-86: cp14-chatsan-replacement-86
+    cp14-chatsan-word-87: cp14-chatsan-replacement-87
+    cp14-chatsan-word-88: cp14-chatsan-replacement-88
+    cp14-chatsan-word-89: cp14-chatsan-replacement-89
+    cp14-chatsan-word-90: cp14-chatsan-replacement-90
+    cp14-chatsan-word-91: cp14-chatsan-replacement-91
+    cp14-chatsan-word-92: cp14-chatsan-replacement-92
     #CP14-RU-ChatSanitize-End
     chatsan-word-1: chatsan-replacement-1
     chatsan-word-2: chatsan-replacement-2
