--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/coins.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/coins.yml
@@ -28,7 +28,13 @@
     category: Currency
   - type: EmitSoundOnLand
     sound:
-      path: /Audio/_CP14/Items/coins_fall.ogg
+      path: /Audio/_CP14/Items/coins_fall.ogg  
+  - type: EmitSoundOnDrop
+    sound:
+      collection: CP14Coins
+  - type: EmitSoundOnPickup
+    sound:
+      collection: CP14Coins
 
 # Copper
 
