more coins roundstart

--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
@@ -44,3 +44,7 @@
     contents:
     - id: CP14CopperCoin1
     - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14SilverCoin1
