--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/lightHammer.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/lightHammer.yml
@@ -45,5 +45,8 @@
       params:
         variation: 0.03
         volume: 2
+  - type: Tag
+    tags:
+    - CP14Hammer
   - type: CP14Currency
     currency: 200
