--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/mace.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/mace.yml
@@ -30,5 +30,8 @@
     cPAnimationLength: 0.25
   - type: StaminaDamageOnHit
     damage: 6
+  - type: Tag
+    tags:
+    - CP14Mace
   - type: CP14Currency
     currency: 500
