--- a/Resources/Prototypes/_CP14/tags.yml
+++ b/Resources/Prototypes/_CP14/tags.yml
@@ -51,3 +51,18 @@
 
 - type: Tag
   id: CP14Rabbit
+
+- type: Tag
+  id: CP14Sword
+
+- type: Tag
+  id: CP14Hammer
+
+- type: Tag
+  id: CP14Dagger
+
+- type: Tag
+  id: CP14Axe
+
+- type: Tag
+  id: CP14Mace
