--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/sword.yml
@@ -38,5 +38,8 @@
     fuckupChance: 0.5
     requiredSkills:
     - Warcraft
+  - type: Tag
+    tags:
+    - CP14Sword
   - type: CP14Currency
     currency: 1200
