--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -381,7 +381,7 @@
 - type: accent
   id: chatsanitize
   wordReplacements:
-    #CP14-RU-ChatSanitize-Start
+    #CP14-ChatSanitize-Start
     cp14-chatsan-word-1: cp14-chatsan-replacement-1
     cp14-chatsan-word-2: cp14-chatsan-replacement-2
     cp14-chatsan-word-3: cp14-chatsan-replacement-3
@@ -474,7 +474,9 @@
     cp14-chatsan-word-90: cp14-chatsan-replacement-90
     cp14-chatsan-word-91: cp14-chatsan-replacement-91
     cp14-chatsan-word-92: cp14-chatsan-replacement-92
-    #CP14-RU-ChatSanitize-End
+    cp14-chatsan-word-93: cp14-chatsan-replacement-93
+    cp14-chatsan-word-94: cp14-chatsan-replacement-94
+    #CP14-ChatSanitize-End
     chatsan-word-1: chatsan-replacement-1
     chatsan-word-2: chatsan-replacement-2
     chatsan-word-3: chatsan-replacement-3
