--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
@@ -28,7 +28,9 @@
   - type: StorageFillVisualizer
     maxFillLevels: 4
     fillBaseName: wallet
-  - type: Dumpable #TODO sounds
+  - type: Dumpable
+    soundDump:
+      collection: CP14Coins
     multiplier: 0.8
   - type: Clothing
     slots: [belt]
@@ -44,3 +46,7 @@
     contents:
     - id: CP14CopperCoin1
     - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14CopperCoin1
+    - id: CP14SilverCoin1
