--- a/Resources/Prototypes/_CP14/Entities/Clothing/Back/backpacks.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Back/backpacks.yml
@@ -4,6 +4,7 @@
   - Clothing
   - ContentsExplosionResistanceBase
   id: CP14ClothingBackpackBase
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Huge
