--- a/Resources/Prototypes/_CP14/Entities/Clothing/Eyes/eyes.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Eyes/eyes.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingEyesBase
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     state: icon
