--- a/Resources/Prototypes/_CP14/Entities/Clothing/Shirt/shirt.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Shirt/shirt.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingShirtBase
+  categories: [ ForkFiltered ]
   components:
   - type: Clothing
     equipDelay: 1
