--- a/Resources/Prototypes/_CP14/Entities/Clothing/Gloves/gloves.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Gloves/gloves.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingGlovesBase
+  categories: [ ForkFiltered ]
   components:
   - type: Clothing
     equipDelay: 0.2
