--- a/Resources/Prototypes/_CP14/Entities/Clothing/Pants/pants.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Pants/pants.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingPantsBase
+  categories: [ ForkFiltered ]
   components:
   - type: Clothing
     equipDelay: 1
