--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingRingBase
+  categories: [ ForkFiltered ]
   components:
   - type: Item
     size: Tiny
