--- a/Resources/Prototypes/_CP14/Entities/Clothing/Shoes/shoes.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Shoes/shoes.yml
@@ -2,6 +2,7 @@
   abstract: true
   parent: Clothing
   id: CP14ClothingShoesBase
+  categories: [ ForkFiltered ]
   components:
   - type: Clothing
     equipDelay: 1
